# vulkan-blas-shaders

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amax.glsl  amin.glsl  asum.glsl  axpy.glsl  complex.h  constants.h  copy.glsl  dot.glsl  gemv-older.glsl  gemv-row-no-transpose.glsl  gemv.glsl  gemv.spv  ger.glsl  helpers.h  max.glsl  min.glsl  mul_mat_vec.comp  mul_mat_vec_base.comp  nrm2.glsl  ops.h  rot.glsl  rotg.glsl  rotm.glsl  scal.glsl  sum.glsl  swap.glsl  test-blas.cpp  test_blas.py  trsv-lower.glsl  trsv-upper.glsl  trsv.glsl
adapted-from-clblast/: common.glsl
adapted-from-clblast/helpers/: fill-vector.glsl
adapted-from-clblast/level2/: xgemv-fast-rot.glsl  xgemv-fast.glsl  xgemv.glsl  xgemv.spv  xtrsv-backward.glsl  xtrsv-common.glsl  xtrsv-fill-vector.glsl  xtrsv-forward.glsl
tests/: test-blas-runtime.hpp  test-blas.cpp  tests-common.hpp
